# caelumGraphicsSystem

./: .gitignore  CMakeLists.txt  LICENSE  README
inc/: CGS.h  CGSDepends.h  CGSMesh.h  CGSMeshToTextureAdapter.h  CGSShader.h  CGSTexture.h  CGSTextureHole.h  CGSTypeConversions.h  CGSUtility.h  CGSVectors.h
src/: CGS.cpp  CGSMesh.cpp  CGSMeshToTextureAdapter.cpp  CGSProgramUniforms.cpp  CGSRenderQueue.cpp  CGSShader.cpp  CGSTexture.cpp  CGSTextureHole.cpp  CGSTypeConversions.cpp
